--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </script>
   </head>
   <body>
-    <p>ther is no more flags here your looking it in wrong place!</p>
+    <p>there is no more flags here your looking it in wrong place!</p>
     <!-- flag2: _f1nd -->
   </body>
 </html>
